--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -31,6 +31,7 @@
                                 <i class="fa fa-plus"></i>
                                 Import
                             </a>
+                            <a href="\assets\FileImport\Import.xlsx" download="File import">Tải file mẫu</a>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped" id="table-1">
