--- a/MonthlyStatement/Views/Account/Login.cshtml
+++ b/MonthlyStatement/Views/Account/Login.cshtml
@@ -75,7 +75,7 @@
             <h2><img src="~/assets/img/vlu/LGVL.png" alt=""><br> MONTHLY STATEMENT</h2>
             <form method="post">
                 <div class="signup_link" style="margin: 5px 0; text-align: center; font-size: 16px; color: #666666">
-                    Signup with mail VLU
+                    Đăng nhập mail VLU
                 </div>
             </form>
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
