--- a/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
@@ -181,8 +181,8 @@ else
                                                                                             </button>
                                                                                         </td>
                                                                                     </tr>
-                                                                                    <tr class="" style="max-width: 50px">
-                                                                                        <th colspan="2">@itemsss.Category.category_content</th>
+                                                                                    <tr class="boxdanhmuc">
+                                                                                        <th colspan="2">@(i).@(k) @itemsss.Category.category_content</th>
                                                                                     </tr>
                                                                                     <tr hidden id="append-@itemsss.category_id"></tr>
                                                                                     <tr id="formInput-@itemsss.category_id-">
