--- a/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportStaff/Detail.cshtml
@@ -12,7 +12,7 @@
     var form = models.StaffReports.Where(p => p.report_period_id == idperiod);
     string emails = ViewBag.accStaID;
     var formPer = models.StaffReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(emails));
-    int per = formPer.First().staff_report_id;
+    int per = ViewBag.StaID;
 }
 
 <section class="section">
@@ -97,7 +97,7 @@
                                                     <div class="col">
                                                         <table class="table table-bordered dataTable">
                                                             <tbody>
-                                                                <tr class="" style="max-width: 50px">
+                                                                <tr class="boxdanhmuc">
                                                                     <th>@items_lv3.Category.category_content</th>
                                                                 </tr>
                                                                 @{ var items_groupby = models.FormStaffReports.FirstOrDefault(f => f.report_period_id == idperiod).FormStaffReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_staff_report_detail_id == x.form_staff_report_detail_id).GroupBy(x => x.form_staff_report_detail_id).ToList();}
