--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
@@ -15,7 +15,7 @@
     string emails = User.Identity.Name;
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.DepartmentReports.Where(p => p.report_period_id == idKy && p.account_id.Equals(accID)).ToList();
-    int per = formPer.First().department_report_id;
+    int per = ViewBag.DepDetail;
 
 }
 
@@ -142,9 +142,9 @@
                                                                         <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_department_report_detail_id" />
                                                                         <table class="table table-bordered dataTable">
                                                                             <tbody>
-                                                                                <tr class="" style="max-width: 50px">
+                                                                                <tr class="boxdanhmuc">
                                                                                     <th colspan="2"> @itemsss.Category.category_content</th>
-                                                                                </tr>
+                                                                                </tr>                                                                             
                                                                                 @foreach (var items_content_lv3 in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == itemsss.form_department_report_detail_id && p.department_report_id == per).ToList())
                                                                                 {
                                                                                     inputIndex++;
