--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalDetail.cshtml
@@ -13,7 +13,7 @@
     string emails = User.Identity.Name;
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.PersonalReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(accID));
-    int per = formPer.First().personal_report_id;
+    int per = ViewBag.PerDetail;
 }
 
 <section class="section">
@@ -85,9 +85,7 @@
                                                     <tr hidden id="append-@items.category_id"></tr>
                                                 </tbody>
                                             </table>
-
                                         </div>
-
                                     </div>
                                     if (models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                     {
@@ -98,7 +96,7 @@
                                                     <div class="col">
                                                         <table class="table table-bordered dataTable">
                                                             <tbody>
-                                                                <tr class="" style="max-width: 50px">
+                                                                <tr class="boxdanhmuc">
                                                                     <th>@items_lv3.Category.category_content</th>
                                                                 </tr>
                                                                 @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
