--- a/MonthlyStatement/Areas/Personal/Views/Report/PersonalReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/PersonalReportEdit.cshtml
@@ -15,7 +15,7 @@
     string emails = User.Identity.Name;
     string accID = models.AspNetUsers.FirstOrDefault(a => a.Email.ToLower().Equals(emails.ToLower().Trim())).Id;
     var formPer = models.PersonalReports.Where(p => p.report_period_id == idKy && p.account_id.Equals(accID)).ToList();
-    int per = formPer.First().personal_report_id;
+    int per = ViewBag.PerDetail;
 
 }
 
@@ -138,7 +138,7 @@
                                                                         <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_personal_report_detail_id" />
                                                                         <table class="table table-bordered dataTable">
                                                                             <tbody>
-                                                                                <tr class="" style="max-width: 50px">
+                                                                                <tr class="boxdanhmuc">
                                                                                     <th colspan="2"> @itemsss.Category.category_content</th>
                                                                                 </tr>
                                                                                 @foreach (var items_content_lv3 in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == itemsss.form_personal_report_detail_id && p.personal_report_id == per).ToList())
